--- a/assets/css/me.css
+++ b/assets/css/me.css
@@ -1,12 +1,3 @@
-/*
-Template Name: Me
-Author: One Page Love
-Author URI: https://onepagelove.com
-Template URI: https://onepagelove.com/me
-Description: Me is a slick, personal layout for any individual wanting a minimal online presence. Features include a big background image, logo, bio and icons.
-Version: 0.2.2
-*/
-/* -- CSS Reset -- */
 @import url("https://fonts.googleapis.com/css?family=Roboto:400,500");
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
@@ -37,18 +28,6 @@ body {
 
 ol, ul {
   list-style: none; }
-
-blockquote, q {
-  quotes: none; }
-
-blockquote:before, blockquote:after,
-q:before, q:after {
-  content: '';
-  content: none; }
-
-table {
-  border-collapse: collapse;
-  border-spacing: 0; }
 
 * {
   -webkit-font-smoothing: antialiased;
@@ -110,7 +89,7 @@ body.page-template-page-fullsingle-me {
   line-height: 60px;
   letter-spacing: -0.5px;
   color: #999999;
-  background-image: url("../../images/background.jpg");
+  background-image: url("../../images/Eaten-Love-Muted.jpg");
   background-position: center center;
   background-size: cover; }
   body.page-template-page-fullsingle-me p {
@@ -246,51 +225,6 @@ body.page-template-page-fullsingle-me {
         fill: #FFFFFF;
         -webkit-transition: 0.1s;
         transition: 0.1s; }
-
-/* .credit {
-  font-size: 12px;
-  line-height: 14px;
-  margin-bottom: 0;
-  -webkit-animation: fadein 8s;
-          animation: fadein 8s; }
-  .credit p.copyright {
-    font-size: 12px;
-    line-height: 14px;
-    font-weight: 400;
-    opacity: 0.4; }
-    .credit p.copyright a {
-      color: #999999; } */
-/* 
-body.page-template-page-fullsingle-me.me-video {
-  background-image: none; } */
-  /* body.page-template-page-fullsingle-me.me-video .me-video-container {
-    overflow: hidden;
-    position: absolute;
-    z-index: 0;
-    width: 100vw;
-    height: 100vh; } */
-  /* body.page-template-page-fullsingle-me.me-video video.video {
-    -o-object-fit: cover;
-       object-fit: cover;
-    -o-object-position: 50% 50%;
-       object-position: 50% 50%;
-    width: 100%;
-    height: 100%; } */
-  /* body.page-template-page-fullsingle-me.me-video .video-wrap {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    -webkit-transform: translate(-50%, -50%);
-            transform: translate(-50%, -50%); } */
-  /* body.page-template-page-fullsingle-me.me-video .video-container {
-    position: relative;
-    overflow: hidden;
-    height: 56.25vw;
-    width: 100vw; }
-    @media (max-aspect-ratio: 16 / 9) {
-      body.page-template-page-fullsingle-me.me-video .video-container {
-        height: 100vh;
-        width: 177.7777777778vh; } } */
     
   .full-screen-video {
     position: absolute;
@@ -310,36 +244,4 @@ body.page-template-page-fullsingle-me.me-video {
     min-width: 100%;
     min-height: 100vh;
   }
-  /* div.iframe-container {
-    overflow: hidden;
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-  } */
 
-  /* iframe {
-    overflow: hidden;
-     height: 110%;
-  } */
-
-
-  /* body.page-template-page-fullsingle-me.me-video .video-container iframe,
-  body.page-template-page-fullsingle-me.me-video .video-container .iframe-container,
-  body.page-template-page-fullsingle-me.me-video .video-container object,
-  body.page-template-page-fullsingle-me.me-video .video-container embed {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%; }
-  body.page-template-page-fullsingle-me.me-video .fs-me {
-    background-color: rgba(0, 0, 0, 0.6);
-       } */
-
-  /* @media only screen and (min-width: 500px) {
-    body.page-template-page-fullsingle-me.me-video .fs-me {
-    width: 80vw;
-    /* height: 100vh; */
-    }
-  } */
